fix white space under hero slider on home page

--- a/src/components/teaser/_teaser--hero.scss
+++ b/src/components/teaser/_teaser--hero.scss
@@ -1,7 +1,13 @@
 .cmp-teaser--hero {
   .cmp-teaser {
   }
+  .cmp-image__link {
+    display:flex;
+  }
   .cmp-teaser__image {
+    > div {
+      display: flex;
+    }
     & img {
       width: 100%;
     }
